--- a/pom.xml
+++ b/pom.xml
@@ -1037,7 +1037,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
+	<configuration>
+          <parallel>classes</parallel>
+          <threadCount>20</threadCount>		
           <excludes>
             <exclude>**/TestSerDe.java</exclude>
             <exclude>**/TestHiveMetaStore.java</exclude>
